--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.14.0+5
   firebase_database: ^3.0.7
+  google_sign_in: ^4.1.4
 
 dev_dependencies:
   flutter_test:
@@ -19,3 +20,5 @@ flutter:
 
   assets:
     - assets/flutter-icon.png
+    - assets/aipon.png
+
